--- a/index.html
+++ b/index.html
@@ -23,9 +23,12 @@
     <span>Personal Information</span>
   </div>
 </div>
-        
-        <label for="fullname">Full Name</label>
-        <input type="text" id="fullname" name="fullname" required placeholder="Luis Adam Dela Cruz" />
+
+         <label for="firstname">First Name</label>
+        <input type="text" id="firstname" name="firstname" required placeholder="Luis Adam" />
+      
+        <label for="fullname">Last Name</label>
+        <input type="text" id="Lastname" name="Lastname" required placeholder="Dela Cruz" />
 
         <label for="email">Email Address</label>
         <input type="email" id="email" name="email" required placeholder="luisadamdelacruz8@gmail.com" />
