--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
          <label for="firstname">First Name</label>
         <input type="text" id="firstname" name="firstname" required placeholder="Luis Adam" />
       
-        <label for="fullname">Last Name</label>
+        <label for="Lastname">Last Name</label>
         <input type="text" id="Lastname" name="Lastname" required placeholder="Dela Cruz" />
 
         <label for="email">Email Address</label>
